force-app/main/default/objects/TubeLengthSize__c/TubeLengthSize__c.object-meta.xml
<CustomObject>
    <description>Possible tube length size</description>
    <label>Tube Length Size</label>
    <nameField>
        <label>Length Size Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tube Length Sizes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>