force-app/main/default/objects/TubeLengthSize__c/fields/MaxLength__c.field-meta.xml
<CustomField>
    <fullName>MaxLength__c</fullName>
    <description>Maximum length of the tube in millimeters</description>
    <inlineHelpText>Maximum length of the tube in millimeters</inlineHelpText>
    <label>Max Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>