force-app/main/default/objects/TubeLengthSize__c/fields/MinLength__c.field-meta.xml
<CustomField>
    <fullName>MinLength__c</fullName>
    <description>Minimal length of the tube in millimeters</description>
    <inlineHelpText>Minimal length of the tube in millimeters</inlineHelpText>
    <label>Min Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>