force-app/main/default/objects/TubeLengthSize__c/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <label>Length Size Name (Rus)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>